Solution for exercise variables, params andheaders.